actualizado colores y fondo para list song

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body>
+  <style>
+    .lolxd{
+      background: url("https://i.ibb.co/ckH9dZP/lol.jpg");
+    }
+  </style>
+  <body class="lolxd">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
